<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/featurelist"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="1" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:background="#ffffff" >

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#FFA500"
            android:text="@string/bmicalculator"
            android:textColor="#fff"
            android:textSize="20sp"
            android:onClick="BMIcalculater"
            android:id="@+id/Bmicalculater" />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/steak3" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:background="#fff" >
        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/salmon3"
             />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#FFA500"
            android:text="@string/dietplanner"
            android:textColor="#fff"
             android:textSize="20sp"
             android:id="@+id/showdietcal" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:background="#fff" >
        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#FFA500"
            android:text="@string/extrainformation"
            android:textColor="#fff"
             android:textSize="20sp"  />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/panakota3"
             />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="0.25"
        android:background="#55aaaa" >
        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="@drawable/fettshrimp3"
             />

        <Button
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:background="#FFA500"
            android:text="@string/help"
            android:textColor="#fff"
             android:textSize="20sp"  />
    </LinearLayout>

</LinearLayout>